Save/Update files [ci skip]

--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -382,7 +382,7 @@
  BYZ_unlock_janissary_mercenary_company:0 "傭兵団「§Jトルコ・イェニチェリ兵§!」が利用可能になり、雇用時に§Y軍熟練度§!を一切消費しません。"
  BYZ_relations:0 "全§Yムスリム§!国家は、§Y[Root.GetName]§!への評価を§G+35§!します。"
  BYZ_kaaba_but_only_gives_prestige_and_half_of_religious_unity:0 "記念碑§Yカアバ神殿§!が利用可能になりますが、§Y[Root.GetName]§!は§Y威信§!と半分の§Y宗教統一度への貢献§!のみしか受け取れません。"
- BYZ_may_use_kaaba:0 "@BYZ£§Y[BYZ.GetAdjective]§!のイベント§Yマスジド・ハラームの運命§!において、「§Yモスクを教会へ！§!」を選択した。"
+ BYZ_may_use_kaaba:0 "@BYZ §Y[BYZ.GetAdjective]§!のイベント§Yマスジド・ハラームの運命§!において、「§Yモスクを教会へ！§!」を選択した。"
  BYZ_great_general:0 "§Y高い陸軍伝統§!を持つ特定分野に精通した将軍を得ます。"
  BYZ_this_province_will_lose_development:0 "§Y[This.GetName]§!は§Y開発度§!を§R-75.0%§!され、§Y[Root.GetName]§!は失った§Y開発度§!ごとに§G+75¤§!を得ます。"
  BYZ_may_only_build_in_112:1 "§Y[112.GetName]§!において、造船所やドックを必要とせずに§Yガレアス§!が建造できるようになります。"
@@ -422,7 +422,7 @@
  BYZ_most_developed_city_in_the_world:0 "§Y[This.GetName]§!が全ての都市のなかで最も高い§Y開発度§!を持っている。"
  BYZ_unlock_bosphorus_toll_decision:0 "決断「§Yボスポラス海峡通行料の拡大§!」が解禁され、ボスポラス海峡通行料制度を拡大できるようにします。"
  BYZ_we_will_be_able_to_change_our_map_color:0 "§Yマップカラー§!を変更することが出来ます。"
- BYZ_we_will_adopt_color_of_roman_empire:0 "@ROM£§Y[ROM.GetName]§!の色にする。"
+ BYZ_we_will_adopt_color_of_roman_empire:0 "@ROM §Y[ROM.GetName]§!の色にする。"
  BYZ_nothing_will_occur:0 "何も起きない。"
  BYZ_modifier_will_double:0 "この§Y補正§!は開発度§Y70§!と§Y75§!で2倍になります。"
  BYZ_export_mosaicists:1 "決断「§Yビザンツのモザイク職人の派遣§!」が解禁され、我が国のモザイク職人の専門技術を他国に売ることができるようになります。\n我々は彼らの§G+0.5§!年間分の収入を得ることができ、彼らは以下の補正を得ます："
@@ -2616,7 +2616,7 @@
  per_fortify_the_thar_desert_at:0 "§Y[Root.GetName]§!またはその属国が§Yジャングラデシュ§!、§Yマールワール§!、§Yシンド南部§!および§Yパタン§!地方で領有する§Y城壁§!がある州のうち、ランダムで以下の効果を獲得します："
  per_master_of_india_title:0 "インドの支配者"
  per_master_of_india_desc:0 "インドの中心そのものが自国の手中にある。戦役を続け、インドの支配者として絶対的支配を請求せねばならない！"
- per_master_of_india_at:0 "このイベントにより、@MUG£§Y[MUG.GetName]§!を形成できるようになります。"
+ per_master_of_india_at:0 "このイベントにより、@MUG §Y[MUG.GetName]§!を形成できるようになります。"
  per_the_islamic_teachings_title:1 "[Root.GetPreviewColorPER]イスラム教の教え[Root.GetPreviewColorPER_end]"
  per_the_islamic_teachings_desc:0 "イスラム教は複雑な宗教である。ムハンマド－彼に平安あれ－の多くの後継者は、自身の教えが競争相手の教えより優れていると主張し、やがてイスラム教は様々な分派へと分かれた。精神の目覚めを得るために選択できる分派はただ一つであり、たった一つの道だけが選択される。"
  per_the_islamic_teachings_at:1 "§Oシーア派§!もしくは§Oスンナ派§!のミッションが利用可能になります。"
@@ -3068,15 +3068,15 @@
  geo_alliance_muscovy:0 "モスクワと同盟している限り"
  geo_streltsy_capital:0 "§Y[Root.Capital.GetName]§!でストレリツィ連隊を§G20§!連隊獲得します。"
  geo_rus_alliance:0 "ツァーリとの同盟"
- geo_alliance_muscovy_tt_yes:0 "£yes£ @MOS£§Yモスクワ§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_alliance_muscovy_tt_no:0 "£no£ @MOS£§Yモスクワ§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_rival_muscovy_tt_yes:0 "£yes£ @MOS£§Yモスクワ§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_rival_muscovy_tt_no:0 "£no£ @MOS£§Yモスクワ§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_alliance_muscovy_tt_yes:0 "£yes£ @MOS §Yモスクワ§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_alliance_muscovy_tt_no:0 "£no£ @MOS §Yモスクワ§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_rival_muscovy_tt_yes:0 "£yes£ @MOS §Yモスクワ§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_rival_muscovy_tt_no:0 "£no£ @MOS §Yモスクワ§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
  geo_alliance_russia:0 "ロシアと同盟している限り"
- geo_alliance_russia_tt_yes:0 "£yes£ @RUS£§Yロシア§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_alliance_russia_tt_no:0 "£no£ @RUS£§Yロシア§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_rival_russia_tt_yes:0 "£yes£ @RUS£§Yロシア§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_rival_russia_tt_no:0 "£no£ @RUS£§Yロシア§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_alliance_russia_tt_yes:0 "£yes£ @RUS §Yロシア§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_alliance_russia_tt_no:0 "£no£ @RUS §Yロシア§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_rival_russia_tt_yes:0 "£yes£ @RUS §Yロシア§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_rival_russia_tt_no:0 "£no£ @RUS §Yロシア§!と§Tライバル指定中§!にこのミッションを完了した場合、以下を受け取ります："
  geo_modifier_nobles_disaster:0 "ミッション「§Y崩壊を防げ§!」を完了するまで"
  geo_powerful_nobles:0 "強力な貴族"
  georgia_starting_event_tt:0 "自国は崩壊の危機に瀕しています国難§Rグルジア危機§!発生前にミッション「§Y崩壊を防げ§!」を完了することで、国難を回避できます。"
@@ -3096,12 +3096,12 @@
  geo_armenian_union_tt:0 "アルメニア文化を受容文化としている限り"
  geo_armenian_union:0 "アルメニア連合"
  geo_break_legacy_seljuk:0 "セルジュークの遺産を打ち砕く"
- geo_core_qq_tt:0 "§Y[Root.GetName]§!は @QAR£§Y黒羊朝§!の全中核州に恒久的な請求権を獲得します。"
+ geo_core_qq_tt:0 "§Y[Root.GetName]§!は @QAR §Y黒羊朝§!の全中核州に恒久的な請求権を獲得します。"
  geo_princes_of_persia_tt_yes:0 "\n£yes£§Yペルシア§!地方に首都がある国家の中で、自国より§Y総開発度§!が高い国家が存在しない状態でこのミッションを完了した場合、§Yペルシア§!に首都がある全国家に対して開戦事由§Y属国化§!を獲得します。\nこの開戦事由は§G25§!年間有効です。"
  geo_princes_of_persia_tt_no:0 "\n£no£§Yペルシア§!地方に首都がある国家の中で、自国より§Y総開発度§!が高い国家が存在しない状態でこのミッションを完了した場合、§Yペルシア§!に首都がある全国家に対して開戦事由§Y属国化§!を獲得します。\nこの開戦事由は§G25§!年間有効です。"
  geo_resurgent_georgia:0 "再起のグルジア"
- geo_alliance_trebizond_tt_yes:0 "\n£yes£ @TRE£§Yトレビゾンド§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
- geo_alliance_trebizond_tt_no:0 "\n£no£ @TRE£§Yトレビゾンド§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_alliance_trebizond_tt_yes:0 "\n£yes£ @TRE §Yトレビゾンド§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
+ geo_alliance_trebizond_tt_no:0 "\n£no£ @TRE §Yトレビゾンド§!と§T同盟締結中§!にこのミッションを完了した場合、以下を受け取ります："
  geo_own_trebizond_tt_yes:0 "\n£yes£§Yトレビゾンド§!を§T征服§!することでこのミッションを完了した場合、州は§Y州の自治率§!と§Y分離主義§!を全て喪失します。"
  geo_own_trebizond_tt_no:0 "\n£no£§Yトレビゾンド§!を§T征服§!することでこのミッションを完了した場合、州は§Y州の自治率§!と§Y分離主義§!を全て喪失します。"
  geo_centers_of_trade_tt:0 "この補正が有効中の間、§Y交易の中心地§!を§Tアップグレード§!すると、ボーナスとして州の £dip£ 開発度§G1§!を獲得します。"
@@ -3112,8 +3112,8 @@
  geo_trade_income:0 "§Y交易収入§!§G1§!年分を獲得する。"
  geo_empty:0 ""
  geo_counter_turkomans:0 "テュルク人の戦術への対抗"
- geo_remove_akk_core_tt_yes:0 "\n£yes£ @AKK£§Y白羊朝§!が存在しない状態でこのミッションを完了した場合、彼らの中核は自国の中核州全てから§Y削除§!されます。"
- geo_remove_akk_core_tt_no:0 "\n£no£ @AKK£§Y白羊朝§!が存在しない状態でこのミッションを完了した場合、彼らの中核は自国の中核州全てから§Y削除§!されます。"
+ geo_remove_akk_core_tt_yes:0 "\n£yes£ @AKK §Y白羊朝§!が存在しない状態でこのミッションを完了した場合、彼らの中核は自国の中核州全てから§Y削除§!されます。"
+ geo_remove_akk_core_tt_no:0 "\n£no£ @AKK §Y白羊朝§!が存在しない状態でこのミッションを完了した場合、彼らの中核は自国の中核州全てから§Y削除§!されます。"
  geo_wrath_christendom:0 "キリスト教界の憤激"
  geo_syria_christians_tt_yes:0 "\n£yes£§Y信仰の擁護者§!である状態でこのミッションを完了した場合、東方のキリスト教徒は自国の大義に加わり、以下を獲得します："
  geo_syria_christians_tt_no:0 "\n£no£§Y信仰の擁護者§!である状態でこのミッションを完了した場合、東方のキリスト教徒は自国の大義に加わり、以下を獲得します："
@@ -3138,8 +3138,8 @@
  geo_sack_sarai_insight_tt:0 "\n§Gイベントインサイト§!\nこのイベントでは、サライを燃やすか、戦利品を首都に持ち帰るか、都市を破壊することを許すかによって、サライの運命を決めることができます。\n"
  geo_constantinople_decision_tt:0 "自国の首都を§Yコンスタンティノープル§!へ遷都できる決断が解禁されます。"
  geo_throne_romans_insight_tt:0 "\n§Gイベントインサイト§!\nこのイベントは自国を帝国にし、アナトリアにおけるギリシア名称を復活させ、自国の文化を§Yビザンツ§!文化グループに移動させ、自国の首都を§Yコンスタンティノープル§!へ遷都できる決断を解禁し、以下の補正を獲得します："
- geo_tur_development_tt_yes:0 "\n£yes£ @TUR£§Yオスマン§!の§Y総開発§!が自国より少ない状態でこのミッションを完了した場合、以下も受け取ります："
- geo_tur_development_tt_no:0 "\n£no£ @TUR£§Yオスマン§!の§Y総開発§!が自国より少ない状態でこのミッションを完了した場合、以下も受け取ります："
+ geo_tur_development_tt_yes:0 "\n£yes£ @TUR §Yオスマン§!の§Y総開発§!が自国より少ない状態でこのミッションを完了した場合、以下も受け取ります："
+ geo_tur_development_tt_no:0 "\n£no£ @TUR §Yオスマン§!の§Y総開発§!が自国より少ない状態でこのミッションを完了した場合、以下も受け取ります："
  geo_restore_holy_city:0 "聖都の復興"
  geo_restore_holy_city2:0 "聖都の復興"
  geo_city_world_desire:0 "世界が焦がれる都"
@@ -3288,8 +3288,8 @@
  arm_great_armenia_insight:0 "\n§Gイベントインサイト§!：\nこのイベントにより、国名が大アルメニアに改名され、国家アイデアが強化され、恒久的な戦力投射と以下の補正を獲得します："
  arm_turkish_provinces_tt:1 "§Yトルコ§!文化の全領有州で州の自治率§G-100.0§!および分離主義の年数§G-20§!を獲得します。"
  arm_tigranakert_capital_tt:0 "自国の首都を§Yティグラナケルト§!へ遷都できる決断が§G解禁§!されます。"
- arm_ottoman_rival_tt_yes:0 "\n£yes£ @TUR£§Yオスマン§!が自国の§Yライバル§!または§Y敵§!である状態でこのミッションを完了した場合、以下も受け取ります："
- arm_ottoman_rival_tt_no:0 "\n£no£ @TUR£§Yオスマン§!が自国の§Yライバル§!または§Y敵§!である状態でこのミッションを完了した場合、以下も受け取ります："
+ arm_ottoman_rival_tt_yes:0 "\n£yes£ @TUR §Yオスマン§!が自国の§Yライバル§!または§Y敵§!である状態でこのミッションを完了した場合、以下も受け取ります："
+ arm_ottoman_rival_tt_no:0 "\n£no£ @TUR §Yオスマン§!が自国の§Yライバル§!または§Y敵§!である状態でこのミッションを完了した場合、以下も受け取ります："
  jerusalem_held_empowered:0 "エルサレムの征服"
  arm_new_anatolian_hegemon:0 "新たなアナトリア覇権国家"
  arm_great_city_tigranes:0 "大都市ティグラネス"
@@ -3573,10 +3573,10 @@
  turkoman_advance:0 "テュルク族の進撃"
  turkoman_exploiting_the_crisis:0 "危機に乗じて"
  turkoman_plotting_timurid_donwfall:0 "ティムール朝滅亡の陰謀"
- turkoman_support_indep_tt_yes:1 "\n£yes£ @TIM£§Yティムール§!の任意の従属国に対して§Y独立を支援§!している状態でこのミッションを完了した場合、以下も受け取ります："
- turkoman_support_indep_tt_no:1 "\n£no£ @TIM£§Yティムール§!の任意の従属国に対して§Y独立を支援§!している状態でこのミッションを完了した場合、以下も受け取ります："
+ turkoman_support_indep_tt_yes:1 "\n£yes£ @TIM §Yティムール§!の任意の従属国に対して§Y独立を支援§!している状態でこのミッションを完了した場合、以下も受け取ります："
+ turkoman_support_indep_tt_no:1 "\n£no£ @TIM §Yティムール§!の任意の従属国に対して§Y独立を支援§!している状態でこのミッションを完了した場合、以下も受け取ります："
  turkoman_triumphant_conquest:0 "征服の凱旋"
- turkoman_timurid_morale_tt:0 "敵の士気を落としました。したがって、この補正が有効な間、@TIM£§YTティムール§!との戦闘に勝利すると、§G10.0%§!の確率で彼らの兵士が脱走し、自国に人的資源§G2000§!を与えます。\n"
+ turkoman_timurid_morale_tt:0 "敵の士気を落としました。したがって、この補正が有効な間、@TIM §YTティムール§!との戦闘に勝利すると、§G10.0%§!の確率で彼らの兵士が脱走し、自国に人的資源§G2000§!を与えます。\n"
  turkoman_bane_timurids:0 "ティムール朝泣かせ"
  turkoman_tamerlane_bloodline:0 "タメルランの血統を断つ者"
  turkoman_no_timurids_tt_yes:0 "\n£yes£§Yティムール§!朝に支配される国家が存在しない状態でこのミッションを完了した場合、以下も受け取ります："
@@ -3618,14 +3618,14 @@
  turkoman_era_of_white_sheep:0 "白羊の時代"
  turkoman_era_of_black_sheep2:0 "黒羊の時代"
  turkoman_era_of_white_sheep2:0 "白羊の時代"
- turkoman_battle_ottomans_tt_yes:0 "\n£yes£ @TUR£§Yオスマン§!に対して単独での戦闘に一度も負けていない状態でこのミッションを完了した場合、以下も受け取ります："
- turkoman_battle_ottomans_tt_no:0 "\n£no£ @TUR£§Yオスマン§!に対して単独での戦闘に一度も負けていない状態でこのミッションを完了した場合、以下も受け取ります："
+ turkoman_battle_ottomans_tt_yes:0 "\n£yes£ @TUR §Yオスマン§!に対して単独での戦闘に一度も負けていない状態でこのミッションを完了した場合、以下も受け取ります："
+ turkoman_battle_ottomans_tt_no:0 "\n£no£ @TUR §Yオスマン§!に対して単独での戦闘に一度も負けていない状態でこのミッションを完了した場合、以下も受け取ります："
  turkmen_turkic_union_tt:0 "トルコ文化が受容文化である限り"
  turkmen_turkic_union:0 "トルコ連合"
- turkoman_anatolia_cb_tt:0 "@TUR£§Yオスマン§!以外の§Yアナトリア§!の全国家に対して開戦事由§Y属国化§!を獲得します。この開戦事由は§G25§!年間有効です。\n"
+ turkoman_anatolia_cb_tt:0 "@TUR §Yオスマン§!以外の§Yアナトリア§!の全国家に対して開戦事由§Y属国化§!を獲得します。この開戦事由は§G25§!年間有効です。\n"
  turkoman_blue_mosque_tt:0 "§Yモスク§!が建造されていると州の不穏度§G-1.00§!を獲得します。"
  turkoman_peaceful_worshipping:0 "安心して礼拝"
- turkoman_unlock_persia_decision:0 "@PER£§Yペルシア§!を形成できる決断が解禁されます。"
+ turkoman_unlock_persia_decision:0 "@PER §Yペルシア§!を形成できる決断が解禁されます。"
  turkoman_shahanshah_title:0 "自国の支配者は§Yシャーハンシャー§!の称号を採用します。"
  turkoman_turcoiranian_culture:0 "§Yトルコ・イラン§!が新たな主要文化となる。§Yアゼルバイジャン§!文化、§Yトルコ§!文化、§Yトルクメン§!文化である自国の領有州全ての文化が、§Yトルコ・イラン§!文化になる。"
  turkoman_shahanshahs:0 "エーラーンシャフルのシャーハーンシャー"
@@ -3829,7 +3829,7 @@
  mam_enable_kashifs_local_organizations_tt:0 "現地組織§Gカーシフ§!を利用できるようになります"
  mam_has_access_to_kashifs_tt:0 "イベント「§Yマムルーク領の統治§!」を通じて§Yカーシフ§!が利用可能になった"
  mam_1_prod_in_coffee_tt:0 "交易品が§Yコーヒー§!である全州で基本生産§G1§!を獲得します。"
- mam_eth_flavor_tt:0 "@ETH£エチオピアに関する様々なフレーバーイベントを利用できるようになります。"
+ mam_eth_flavor_tt:0 "@ETH エチオピアに関する様々なフレーバーイベントを利用できるようになります。"
  enable_cawa_auxiliary_forces_tt:0 "以下の改革が利用できるようになります：\n"
  has_grain_export_tt:0 "自国から§Y穀物輸出§!を受けている"
  mam_upgrade_national_idea_tt:0 "国家アイデア「§Y専売港§!」の効果が倍になります"
@@ -3856,10 +3856,10 @@
  unified_islam_tt:0 "国家の決断「§Yイスラム統一§!」を制定している"
  mam_upgrade_private_trade_fleets_tt:0 "商人の階級特権「§Y民間交易船団§!」は§Y船の交易力§!が倍になり、一切の§Y影響力§!コストがかかりません。\n"
  mam_1_merc_for_every_cloves_province_tt:0 "\n交易品が§Yクローブ§!である自国もしくは自国の従属国の領有州全てで重商主義を§G1§!獲得します。"
- mam_reward_rival_no_tt:0 "\n£no£ @VEN£ヴェネツィアに対して攻撃的姿勢を取ることで得られる報酬："
- mam_reward_rival_yes_tt:0 "\n£yes£ @VEN£ヴェネツィアに対して攻撃的姿勢を取ることで得られる報酬："
- mam_reward_alliance_no_tt:0 "£no£ @VEN£ヴェネツィアに対して協力的姿勢を取ることで得られる報酬：\n@VEN£との同盟を維持している限り、§Yガレアス船§!が建造可能になります。"
- mam_reward_alliance_yes_tt:0 "£yes£ @VEN£ヴェネツィアに対して協力的姿勢を取ることで得られる報酬：\n@VEN£との同盟を維持している限り、§Yガレアス船§!が建造可能になります。"
+ mam_reward_rival_no_tt:0 "\n£no£ @VEN ヴェネツィアに対して攻撃的姿勢を取ることで得られる報酬："
+ mam_reward_rival_yes_tt:0 "\n£yes£ @VEN ヴェネツィアに対して攻撃的姿勢を取ることで得られる報酬："
+ mam_reward_alliance_no_tt:0 "£no£ @VEN ヴェネツィアに対して協力的姿勢を取ることで得られる報酬：\n@VEN との同盟を維持している限り、§Yガレアス船§!が建造可能になります。"
+ mam_reward_alliance_yes_tt:0 "£yes£ @VEN ヴェネツィアに対して協力的姿勢を取ることで得られる報酬：\n@VEN との同盟を維持している限り、§Yガレアス船§!が建造可能になります。"
  strong_mamluk_regulations_key:0 "強大なマムルークの規制"
  no_nation_med_stronger_navy_tt:0 "地中海周辺に自国より大きな海軍を持つ国家が存在しない"
  mam_indebted_privilege_no_merc_loss_tt:0 "階級特権「§Y[Root.GetBurghersOrFallbackName]への借款§!」は重商主義を減少させなくなります。\n"
@@ -4093,7 +4093,7 @@
  flavor_mam.113_tt:0 "\n§Gイベントインサイト§!：\nこのイベントでは、[343.GetName]にあるダール・アル・マクゼン宮殿の再建を開始することができます。"
  flavor_mam.114_tt:0 "\n§Gイベントインサイト§!：\nこのイベントでは、ペルシア建築を研究、自領全域に採用し、自国の開発努力を改善できます。"
  flavor_mam.115_tt:0 "\n§Gイベントインサイト§!：\nこのイベントでは、[4316.GetName]の運河建設を始めることができます。"
- has_completed_all_persian_missions_tt:0 "§Yペルシア§! @PER£ミッションを全て達成している"
+ has_completed_all_persian_missions_tt:0 "§Yペルシア§! @PER ミッションを全て達成している"
  has_exported_grain_in_europe_tt:0 "少なくとも一回以上§Yヨーロッパ§!に首都がある国家に穀物を輸出した"
  has_exported_grain_in_oceania_tt:0 "少なくとも一回以上§Yオセアニア§!に首都がある国家に穀物を輸出した"
  has_exported_grain_in_north_america_tt:0 "少なくとも一回以上§Y北アメリカ§!に首都がある国家に穀物を輸出した"
@@ -4134,8 +4134,8 @@
  desc_just_asked_to_convert_timer:0 ""
  estate_nobles_highland_fortifications_revoke:0 "§Y要塞§!のある§Y山岳§!州はすべて、補正§Y山岳のインフラ整備§!を失います。"
  flavor_arm.1.b:0 "この勝利は我等自身のルーツを消すことなぞできぬ！"
- mam_reward_alliance_yes_tt_no_dlc: "£yes£ @VEN£ヴェネツィアに対して協力的姿勢を取ることで得られる報酬："
- mam_reward_alliance_no_tt_no_dlc: "£no£ @VEN£ヴェネツィアに対して協力的姿勢を取ることで得られる報酬："
+ mam_reward_alliance_yes_tt_no_dlc: "£yes£ @VEN ヴェネツィアに対して協力的姿勢を取ることで得られる報酬："
+ mam_reward_alliance_no_tt_no_dlc: "£no£ @VEN ヴェネツィアに対して協力的姿勢を取ることで得られる報酬："
  desc_mam_disc_troops_modifier:0 ""
  TWO_HUNDRED:0 "200"
  FOUR_HUNDRED:0 "400"
