Save/Update files [ci skip]

--- a/source/localisation/domination_l_english.yml
+++ b/source/localisation/domination_l_english.yml
@@ -1946,7 +1946,7 @@
  mechanic_manpower_from_capturing_forts_yes:0 "敵の要塞を占拠すると、各要塞レベルごとに§G0.1§!年分の人的資源を獲得します（この効果は各要塞で§Y5年§!ごとにしか発生しません）"
  mechanic_manpower_from_defeating_armies_yes:0 "戦闘に勝利すると、戦闘で倒れた敵部隊兵力の§G10%§!を人的資源として獲得します。"
  ashigaru_reform:0 "足軽部隊"
- ashigaru_reform_desc:0 "The ubiquity of conflicts and wars in Japan during the Sengoku Jidai gave rise to a new class of warriors, the ashigaru. While peasants and thus technically not samurai, the easier accessibility to them in comparison to the samurai turned them into the backbone of any army. Armed with spears, bows and swords, their constant presence in battle made them into a class between the farmers and the samurai, being in some cases even considered as part of the lower strata of samurai. Hover, it was with the introduction of the tanegashima teppou, the Japanese adaption of the matchlock, that their presence truly shined. Its easier learning curve compared to the bow, combined with the superior numbers of the ashigaru compared to the samurai, made it so that ashigaru armed with matchlocks became the main part of any Japanese army."
+ ashigaru_reform_desc:0 "戦国時代の日本では、内紛や戦争が頻発し、足軽という新しい戦士階級が生まれた。足軽は農民であって厳密には侍ではないが、侍と比較して簡単に利用できることから、彼らはあらゆる軍勢の要になった。槍や弓、刀を装備し、常に戦場にいる彼らは、農民と侍の中間に位置する階級となり、場合によっては下層武士とみなされることさえあった。しかし、マッチロック式である火縄銃を日本式に改良した種子島筒が導入されたことで、足軽の存在は真の輝きを放った。火縄銃は弓と比較して習熟しやすく、足軽は侍に数で優っていたため、火縄銃を装備した足軽が日本中で軍の主体となっていった。"
  early_bushido_code_reform:0 "初期の武士道"
  early_bushido_code_reform_desc:0 "武士道は侍の態度、行動、生き方を定める道徳規範である。この規範が神話的な地位を得るのは数世紀後だが、その基盤となる概念は確立してからずっとその一部であった。"
  early_bushido_modifier:0 "初期の武士道"
@@ -2094,8 +2094,8 @@
  devshirme_assign_local_pashas_at:0 "§Y異教§!の領有州はすべて、以下の効果を得ます："
  elective_monarchy_reform:0 "選挙君主制"
  elective_monarchy_reform_desc:0 "選挙君主制は、権力を握る後継者を継承法ではなく、国内での選出によって規定する。貴族たちはその候補者となる人物を、外国の王朝からも、自分たちの中からも、王家の一員からも提案することができる。"
- mechanic_has_ruler_election_yes:0 "Has §YRuler Election§! when a new ruler ascends the throne"
- mechanic_has_improved_ruler_election_yes:0 "Increase the skills of candidates of the §YRuler Election§!"
+ mechanic_has_ruler_election_yes:0 "新たな統治者が即位すると§Y君主選挙§!が行われます"
+ mechanic_has_improved_ruler_election_yes:0 "§Y君主選挙§!の候補者のスキルが向上"
  mechanic_cheaper_coastal_province_core_yes:0 "沿岸州の領土管理限界が§G-10.0%§!、中核州化コストが§G-25.0%§!"
  british_monarchy:0 "ブリテン君主制"
  british_monarchy_desc:0 "イングランドの君主制とスコットランドの政府が自然に発展したものである。両国の議会はグレートブリテンと議会として統合された。"
@@ -6748,5 +6748,5 @@
  flavor_mos.2.desc_mos:0 "[Root.GetName]の力が増すにつれて、[466.GetName]の領主たちは我々をくびきに繋いで統制するのがますます難しくなっている。最終的にタタール人は要求を押し付けるには我々が強大すぎることを認めざるを得なくなった。ついに[Root.GetUsableName]の[Root.GovernmentName]はタタールのくびきから解放された！"
  flavor_mos.2.desc_mos_too_strong:0 "[target_country.GetName]の力は管理不能なほどに成長した。理屈の上ではタタールの支配下にあるものの、実際には[target_country.GetAdjective]人は我々の襲撃に対抗できる国家を確立することに成功ている。我々が[target_country.GetName]に要求を押し付けることは不可能である。くびきはもはや存在しない..."
  flavor_mos.2.c:0 "残念だ…。"
- tur_defeat_the_mamluks_tt:0 "§Y[Root.GetName]§! gains a permanent claims on the areas of §YBahrain§!, §YTabuk§!, §YAn Nafud§!, §Yal-Qasim§!, §YMedina§! and §YMecca§!."
- commercial_enterprise_no_overlord_dow:0 "We may not declare war on our Commercial Enterprise subjects."
+ tur_defeat_the_mamluks_tt:0 "§Y[Root.GetName]§!は、§Yバーレーン§!、§Yタブーク§!、§Yネフド砂漠§!、§Yアル＝カーシム§!、§Yメディナ§!および§Yメッカ§!地域に恒久的な請求権を獲得します。"
+ commercial_enterprise_no_overlord_dow:0 "営利企業従属国に宣戦を布告することはできません。"
