--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -32,7 +32,7 @@
  NEW_ACHIEVEMENT_1_17_NAME:0 "真のカトリック"
  NEW_ACHIEVEMENT_1_17_DESC:0 "3人の司教を影響下に置く。"
  NEW_ACHIEVEMENT_1_18_NAME:0 "真の王権神授者"
- NEW_ACHIEVEMENT_1_18_DESC:1 "Get a 5/5/5 Ruler or higher."
+ NEW_ACHIEVEMENT_1_18_DESC:1 "5/5/5以上の君主を迎える。"
  NEW_ACHIEVEMENT_1_19_NAME:0 "イタリアの野望"
  NEW_ACHIEVEMENT_1_19_DESC:0 "イタリアを形成する。"
  NEW_ACHIEVEMENT_1_20_NAME:0 "冷戦"
@@ -86,7 +86,7 @@
  NEW_ACHIEVEMENT_6_12_NAME:0 "涙の道はない"
  NEW_ACHIEVEMENT_6_12_DESC:0 "チェロキーで制度をすべて受容し１３植民地の中核州を領有する。"
  NEW_ACHIEVEMENT_6_13_NAME:0 "パリの一夜"
- NEW_ACHIEVEMENT_6_13_DESC:1 "Start as England, own and have a core on Paris (do not form another country unless it's Great Britain or the Angevin Kingdom)."
+ NEW_ACHIEVEMENT_6_13_DESC:1 "イングランドで開始し、パリを中核州にする（グレートブリテンまたはアンジュー王国以外の国を形成してはいけない）。"
  NEW_ACHIEVEMENT_6_14_NAME:0 "確かなるルームのスルタン"
  NEW_ACHIEVEMENT_6_14_DESC:0 "オスマンでローマ、モスクワ、イスタンブールを中核州にする。"
  NEW_ACHIEVEMENT_6_15_NAME:0 "市場支配"
@@ -167,7 +167,7 @@
  NEW_ACHIEVEMENT_7_22_NAME:0 "この革命は鎮圧された"
  NEW_ACHIEVEMENT_7_22_DESC:0 "革命政権に対する戦争で、彼らの首都を陥落させ、少なくとも99%の戦勝点を得る。"
  NEW_ACHIEVEMENT_7_23_NAME:0 "東方の跳び地"
- NEW_ACHIEVEMENT_7_23_DESC:1 "Own a core province in the Mexico region as a Buddhist country."
+ NEW_ACHIEVEMENT_7_23_DESC:1 "仏教国としてメキシコ地方に中核州を保有する。"
  NEW_ACHIEVEMENT_7_24_NAME:0 "これこそがシルクロードだ"
  NEW_ACHIEVEMENT_7_24_DESC:0 "絹を産出する州をすべて自国または従属国が領有する。"
  NEW_ACHIEVEMENT_7_25_NAME:0 "真の友"
@@ -306,7 +306,7 @@
  NEW_ACHIEVEMENT_9_28_NAME:0 "第三の道"
  NEW_ACHIEVEMENT_9_28_DESC:0 "イバード派の国で始めて、イスラムすべてのライバル学派を全て滅す（国教を変更してはいけない）。"
  NEW_ACHIEVEMENT_9_29_NAME:0 "バック・トゥ・ザ・ピャスト"
- NEW_ACHIEVEMENT_9_29_DESC:1 "As Mazovia, Glogow or Opole, form the nation of Poland."
+ NEW_ACHIEVEMENT_9_29_DESC:1 "マゾヴィアかグウォグフ、オポーレで、ポーランドを形成する。"
  NEW_ACHIEVEMENT_9_30_NAME:0 "大ペルミ"
  NEW_ACHIEVEMENT_9_30_DESC:0 "ペルミとして、ロシア、シベリア、スカンディナヴィア、カナダ、ハドソン湾、カスカディア地方を自国か従属国が領有する。"
  NEW_ACHIEVEMENT_9_31_NAME:0 "ラザルス"
@@ -342,7 +342,7 @@
  NEW_ACHIEVEMENT_10_14_NAME:0 "クバの煙草"
  NEW_ACHIEVEMENT_10_14_DESC:0 "クバとして、ハバナを自国か従属国が領有し、たばこの最大生産国になる。"
  NEW_ACHIEVEMENT_10_15_NAME:0 "クシュ王国の再建"
- NEW_ACHIEVEMENT_10_15_DESC:1 "As a Nubian culture nation, own or have a non-Tributary subject own the entire Egyptian region."
+ NEW_ACHIEVEMENT_10_15_DESC:1 "ヌビア文化の国家として、エジプト地方を領有または従属国（非朝貢国）が領有する。"
  NEW_ACHIEVEMENT_10_16_NAME:0 "フェザーン回廊"
  NEW_ACHIEVEMENT_10_16_DESC:0 "フェザーンとして、チュニス、カッシーナ、サフィ、トンブクトゥの交易力を90%以上支配する。"
  NEW_ACHIEVEMENT_10_17_NAME:0 "Victoriaの3"
@@ -743,5 +743,5 @@
  NEW_ACHIEVEMENT_122_DESC:0 "オランダとして、すべての低地地方を領有し要塞防御力が50%に達する。"
  NEW_ACHIEVEMENT_123_NAME:0 "ティムリズ"
  NEW_ACHIEVEMENT_123_DESC:1 "ティムールで開始し、威信75、100の信頼度と150以上の評価を持つ同盟国を5つ持つ。"
- NEW_ACHIEVEMENT_124_NAME:0 "The Hungarian Games"
+ NEW_ACHIEVEMENT_124_NAME:0 "ハンガリアン・ゲーム"
  NEW_ACHIEVEMENT_124_DESC:0 "ハンガリーで開始し、異なる12の国との戦闘に黒軍で23回勝利する"
