Save/Update files [ci skip]

--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -221,8 +221,8 @@
  HORDE_RAZE_TOOLTIP_DELAYED:0 "§Y$NAME$§!は灰燼に帰し、開発度が§R$AMT$§!低下します。\n\nこの行為により、§G$ADM$§!£adm£、§G$DIP$§!£dip£、§G$MIL$§!£mil£および§G$LOOT$§!¤の略奪品を得て、遊牧民の結束が$UNITY$高まります。"
  HORDE_RAZE_TOOLTIP_DELAYED2:1 "彼らの我々への評価は$OPINION$悪化するでしょう。"
  HORDE_RAZE_TOOLTIP_NO_POWER:0 "§R我々は現在、以下の理由により、破壊からいかなる力も得ることはないでしょう：\n$MODIFIERDESC$§!"
- HORDE_RAZE_TOOLTIP_LATER:0 "$NAME|Y$を破壊した後には、我々は、$UNITY$の遊牧民の結束だけでなく、§G$ADM$§!£adm£、§G$DIP$§!£dip£、§G$MIL$§!£mil£及び§G$LOOT$§!¤の略奪品を得るでしょう。"
- CONFIRM_RAZE_TITLE:0 "破壊する州を確認"
+ HORDE_RAZE_TOOLTIP_LATER:0 "$NAME|Y$を破壊すると、$UNITY$の遊牧民の結束だけでなく、§G$ADM$§!£adm£、§G$DIP$§!£dip£、§G$MIL$§!£mil£及び§G$LOOT$§!¤の略奪品を得ます。"
+ CONFIRM_RAZE_TITLE:0 "州の破壊の確認"
  HORDE_RAZE_TOOLTIP_ONLY_NON_CORES:1 "自国が所有し制御下にある非中核州のみ破壊できます。"
  HORDE_RAZE_TOOLTIP_MIN_DEVELOPMENT:1 "この州は開発度が低すぎるため破壊することは出来ません。"
  HORDE_RAZE_TOOLTIP_COOLDOWN:1 "この州は§Y$DATE$§!まで再び破壊することはできません。"
