--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3406,7 +3406,7 @@
  flavor_pap.EVTDESC6:0 "1779年、教皇ピウス6世は、ポンティノ湿地を排水して無駄な沼の代わりに、より生産的な農地を作り出した。"
  flavor_pap.EVTOPTA6:0 "土地を獲得"
  flavor_pap.EVTNAME7:1 "カトリック信仰の改革"
- flavor_pap.EVTDESC7:1 "プロテスタント運動の成功は、もはやゆるぎないものである。教皇はそれによってもたらされる挑戦に対処することを枢機卿の委員会に命じた。カトリック信仰自体が危険にさらされることがあってはならないが、教皇とほとんどの枢機卿は、いくつかのプロテスタントの不満が有効であることを認める用意がある。たとえば、司教の頻繁な不在と世俗的な聖職者の過剰が教会の評判を汚していることに異議はない。\n\nしたがって、宗教改革の課題に対応するためにどのように教会を改革し、対抗宗教改革の過程を開始するのが最善かについて協議するため、トリエントにおいて公会議が召集される。"
+ flavor_pap.EVTDESC7:1 "プロテスタント運動の成功は、もはや受け入れがたいものとなった。教皇はプロテスタント運動が提起する課題に対処するよう枢機卿の委員会に命じた。カトリック信仰自体が危険にさらされることがあってはならないが、教皇とほとんどの枢機卿は、いくつかのプロテスタントの不満が有効であることを認める用意がある。たとえば、司教の頻繁な不在や聖職者が世俗的になりすぎていることが教会の評判を汚していることに異議はない。\n\nそのため、宗教改革の課題に対応するためにどのように教会を改革し、対抗宗教改革の過程を開始するのが最善かについて協議するため、トリエントにおいて公会議が召集される予定である。"
  flavor_pap.EVTOPTA7:1 "トリエント公会議を召集する。"
  flavor_pap.7.tt:0 "招待状がすべての§Yカトリック§!の国々に送られます。"
  flavor_pap.EVTOPTB7:0 "何もしない。"
