--- a/source/localisation/king_of_kings_l_english.yml
+++ b/source/localisation/king_of_kings_l_english.yml
@@ -318,7 +318,7 @@
  BYZ_fight_until_the_last_man:0 "最後の一人になるまで戦う"
  desc_BYZ_fight_until_the_last_man:0 ""
  BYZ_alienation_of_western_merchants:0 "西欧商人の疎外"
- desc_BYZ_alienation_of_western_merchants:0 "特権を剥奪することで、少なくとも当面は、欧米商人を港から遠ざけたことになる。"
+ desc_BYZ_alienation_of_western_merchants:0 "特権を剥奪することで、少なくとも当面は、西洋商人を港から遠ざけたことになる。"
  BYZ_supporting_allies:0 "ローマとの関係が実を結ぶ"
  desc_BYZ_supporting_allies:0 "ローマとの関係が功を奏し、より幅広い国々との繋がりを築くことができた。"
  BYZ_mosaicists_self:0 "熟練したモザイク職人"
@@ -735,7 +735,7 @@
  BYZ_revoke_union_of_the_churches_title:0 "東西教会の合同の終焉"
  BYZ_revoke_union_of_the_churches_desc:0 "フィレンツェ公会議の後、我々はカトリック教会との合同を取り決めた。支持を集めるための手段でしかなかったが、この行動はコンスタンティノープル市民を大いに動揺させることになった。"
  BYZ_integrate_galata_title:0 "ガラタの統合"
- BYZ_integrate_galata_desc:0 "ガラタとは、金閣湾の北に築かれたジェノヴァの植民地である。1261年のニンファエム条約によって設立されたが、その有用性は失われたため、ジェノヴァ人は追放されなければならない。"
+ BYZ_integrate_galata_desc:0 "ガラタとは、金角湾の北に築かれたジェノヴァの植民地である。1261年のニンファエウム条約によって設立されたが、その有用性は失われたため、ジェノヴァ人は追放されなければならない。"
  BYZ_mosaicists_decision_title:0 "ビザンツのモザイク職人の派遣"
  BYZ_mosaicists_decision_desc:0 "我々には、国境を越えて名を馳せる熟練の職人がいる。彼らの専門知識は、我々が活用できる重要な資産である。"
  BYZ_ecumenical_decision_title:0 "公会議を開催"
