--- a/source/localisation/winds_of_change_l_english.yml
+++ b/source/localisation/winds_of_change_l_english.yml
@@ -1864,7 +1864,7 @@
  NED_luxembourg_fortress_title:0 "ルクセンブルクのボック"
  NED_luxembourg_fortress_desc:0 "我々の地域の地形はほとんどが平坦で湿地帯であることから、防御可能な建造物が必要であることは明らかだ。[94.GetName]にある強大な砦ほど適切な候補はない。"
  NED_dutch_polders_title:0 "土地の干拓"
- NED_dutch_polders_desc:0 "海は貿易や貨幣を通じて私たちに恩恵を与えてくれていることから、我が国民の生活空間を確保するためには、海を取り戻さなければならないことが判明した。"
+ NED_dutch_polders_desc:0 "海は貿易や貨幣を通じて我々に恩恵を与えてくれていることから、我が国民の生活空間を確保するためには、海を取り戻さなければならないことが判明した。"
  NED_low_countries_urbanization_title:0 "低地諸国の都市"
  NED_low_countries_urbanization_desc:0 "人の進歩が、先人たちの建築上の欠陥によって妨げられたり、停滞したりすることがあってはならない。そのために、都市中心部を建設し、拡張して、物品と住居の需要の増大を促進しよう。"
  NED_fluyts_title:0 "フリュート貨物船"
@@ -1947,7 +1947,7 @@
  NED_military_reforms_title:0 "州軍の創設"
  NED_military_reforms_desc:0 "自国を守る必要がある新興国として、十分な装備を整え、自国の州を守る準備が整った、迅速に動ける軍隊を設立しなければならない。"
  NED_marician_reforms_title:0 "モーリシャスの改革"
- NED_marician_reforms_desc:0 "ヨーロッパにおける陸軍プロフェッショナリズムの台頭は、戦争のあり方が徐々に変化しつつある。王が貴族や民兵を率いて戦いに赴くのではなく、今や軍隊はそれ自体がひとつの組織となっている。人口が少なくても、国家を守るために傭兵を活用することができる。"
+ NED_marician_reforms_desc:0 "ヨーロッパにおける陸軍専門主義の台頭は、戦争のあり方が徐々に変化しつつある。王が貴族や民兵を率いて戦いに赴くのではなく、今や軍隊はそれ自体がひとつの組織となっている。人口が少なくても、国家を守るために傭兵を活用することができる。"
  NED_army_of_the_state_title:0 "国家の陸軍"
  NED_army_of_the_state_desc:0 "軍隊が果たすべきことは一つ、それは国家を守ることだ。外国人や暴徒から国家を守るのだ。それが、我々が自分の身を守ることができるように、ヨーロッパで最も栄光に満ちた軍隊となるよう軍隊を強化しなければならない理由である。"
  NED_statists_and_oragnists_title:0 "議会派とオラニエ派"
@@ -1969,7 +1969,7 @@
  NED_city_of_batavia_title:0 "バタヴィアの建設"
  NED_city_of_batavia_desc:0 "東インド諸島での我々の存在感を高めるには、商人を銃で守り、船舶を安全に停泊できる、最寄りの統治上の中心地が必要である。"
  NED_hansa_relations_title:0 "ハンザ同盟との関係"
- NED_hansa_relations_desc:0 "1441年以来、我が国の海軍は、バルト海の高収益貿易を支配する都市群であるハンザと何度も衝突した。ハンザを打ち負かし、屈辱を与えた後、我々は彼らの港への制限無き寄港とかなりの規模の駐留を許可するコペンハーゲン条約に調印した。今こそ、彼らが戦争に突入する危険を冒さないよう、条約の復活を要求する時だ。"
+ NED_hansa_relations_desc:0 "1441年以来、我が国の海軍は、バルト海の高収益貿易を支配する都市群であるハンザと何度も衝突した。ハンザを打ち負かし、屈辱を与えた後、我々は彼らの港への無制限寄港権と、かなりの規模の駐留を許可するコペンハーゲン条約に調印したのだ。今こそ、彼らが戦争に突入する危険を冒さないよう、条約の復活を要求する時だ。"
  NED_sail_towards_lubeck_title:0 "一括取引の支援"
  NED_sail_towards_lubeck_desc:0 "バルト海の穀物は伝統的に我々の商人によって西へと運ばれてきたが、我々が利用できる機会はまだたくさんある。我々がバルト海での存在を拡大するのであれば、我々は、事業を行うためにより多くの場所を見出す遠征への資金提供について考え始めるのに十分な金を稼ぐことができるだろう。"
  NED_securing_baltic_grain_title:0 "バルト海穀物の確保"
@@ -1981,7 +1981,7 @@
  NED_organizing_the_seven_provinces_title:0 "連邦直轄地"
  NED_organizing_the_seven_provinces_desc:1 "自国は地域差が大きいため、健全な国政を行うことが重要である。そのために、ある地方の派閥が国政に大きな影響力を持ちすぎないよう、時には中央政府が土地を直接管理する必要がある場合がある。"
  NED_northern_renaissance_title:0 "北方ルネサンス"
- NED_northern_renaissance_desc:0 "15世紀から16世紀にかけて、フランドル・ルネサンスは現在のベルギーとオランダを含むフランドル地方で、活気ある文化的・芸術的復興を遂げた。それ芸術の卓越性、貿易の繁栄、知的革新の融合によって特徴づけられる時代であった。ヤン・ファン・エイクや老ピーテル・ブリューゲルのような芸術家たちはこの時代を象徴する人物で、油絵の技法を開拓し、比類ない写実主義で日常生活の細部を捉えた。"
+ NED_northern_renaissance_desc:0 "15世紀から16世紀にかけて、フランドル・ルネサンスは現在のベルギーとオランダを含むフランドル地方で、活気ある文化的・芸術的復興を遂げた。それは芸術の卓越性、貿易の繁栄、知的革新の融合によって特徴づけられる時代であった。ヤン・ファン・エイクや老ピーテル・ブリューゲルのような芸術家たちはこの時代を象徴する人物で、油絵の技法を開拓し、比類なき写実主義で日常生活の細部を捉えた。"
  NED_dutch_architecture_title:0 "オランダのバロック建築"
  NED_dutch_architecture_desc:0 "17世紀に流行したオランダのバロック建築は、壮麗さ、精密さ、実用性を特徴とする独特のスタイルを具現化した。この国の経済的繁栄と世界貿易の優位性に影響され、建築家たちは、すっきりとしたライン、華麗なディテール、機能性重視を採用した。"
  NED_cape_of_good_hope_title:0 "新たなる希望"
@@ -2023,7 +2023,7 @@
  ned_dutch_cloth_trading:0 "オランダ布地の交易"
  desc_ned_dutch_cloth_trading:0 "この地域の織物の多くはオランダ商人によって管理されている。"
  ned_flemish_cloth_trading:0 "フランドル布地の交易"
- desc_ned_flemish_cloth_trading:0 "フランドルの布地貿易は、低地諸国で最も有名な布地貿易のひとつである。"
+ desc_ned_flemish_cloth_trading:0 "フランドルの布地交易は、低地諸国で最も有名な布地交易のひとつである。"
  ned_dutch_polders_modifier:0 "オランダ干拓地"
  desc_ned_dutch_polders_modifier:0 "オランダ干拓地のおかげで、我々の干拓地が洪水によって破壊されることがない。"
  ned_reclamation_of_coast:0 "海岸の再請求"
@@ -2151,7 +2151,7 @@
  modern_economics_reform:0 "現代経済学"
  modern_economics_reform_desc:0 "多くの国は、商人ではなく国土に依存した、より伝統的な経済活動を推進している。その代わりに、より重商主義的な性質の経済を推進することで、我が国は海外からより多くの貿易品を得ることができるだろう。"
  support_state_reform:0 "国家の支援"
- support_state_reform_desc:0 "国家とその意志は絶対的なものである。政府により国家主義的な性格を持たせることで、我々は国家に対する立場をより強固なものにすることができる。"
+ support_state_reform_desc:0 "国家とその意志は絶対的なものである。より国家主義的な性格を政府に持たせることで、我々は国家に対する立場をより強固なものにすることができる。"
  orangist_stadholders_reform:0 "オラニエ派オランダ総督"
  orangist_stadholders_reform_desc:0 "オラニエ派は自らが偉大な支配者であることを証明した。そのため、我々はこれらのオランダ総督が政府においてより大きな権限を持つようにすべきだ。"
  mechanic_seven_provinces_organization_yes:1 "「§Y七州連合§!」の仕組みが解禁され、以下の効果を持ちます：\n主要文化グループの低地地方の州は以下を得ます：\n　開発コスト§G-10.0%§!\n 　交易品生産補正§G+10.0%§!\n 　州の領土管理コスト§G-25.0%§!\n 　建設コストと時間§G-10%§!\n\n§Yヨーロッパ§!の低地地方以外の州は以下を得ます：\n 　州の領土管理コスト§R+25.0%§!\n 　最低自治率§R+33%§!"
@@ -2191,7 +2191,7 @@
  desc_bestevaer_personality:0 "「ベステヴァー」とは「祖父」を意味し、イギリス王室に対する襲撃で知られる歴史上最も偉大な提督の一人、伝説的提督ミヒール・デ・ロイテルの渾名である。"
  bestevaer_personality_die_desc:0 "[GetHerHisCap] enemies can rest easy as [GetHerHis] raids will no longer pillage their ports."
  orangist_stadholder_personality:0 "オラニエ派オランダ総督"
- desc_orangist_stadholder_personality:1 "オラニエ派大義の政治的首謀者。我々の支配者は、仲間のオラニエ派のために権力を確保し、議会派派の影響力を弱めるためなら何でもする。"
+ desc_orangist_stadholder_personality:1 "オラニエ派大義の政治的首謀者。我々の支配者は、仲間のオラニエ派のために権力を確保し、議会派の影響力を弱めるためなら何でもする。"
  orangist_stadholder_personality_die_desc:0 "[GetHerHisCap] political schemes for the Orangists have found their end."
  ned_kept_sound_toll:0 "海峡通行料の維持"
  ned_removed_sound_toll:0 "海峡通行料の廃止"
@@ -2528,7 +2528,7 @@
  apostolic_kingdom:0 "使徒王国"
  apostolic_kingdom_desc:0 "教皇シルウェステル2世は、聖イシュトヴァーンにハンガリー聖冠を授けたとき、我々をキリスト教諸国を守る運命にある正式な使徒公使として認めた。聖イシュトヴァーンの正当な後継者として、我々はキリストの擁護者として、またキリスト教の防波堤として誇りを持って立っている。"
  cuman_lancers_reform:0 "クマン槍騎兵隊の雇用"
- cuman_lancers_reform_desc:0 "クマン人は何世紀にもわたってカルパティア盆地付近に住んでいたが、最近ではドナウ川とティサ川の間の広大な草原を定住の地としている。彼らは数々の紛争で我々を助けてくれたが、彼らの連隊を自軍の正規の中核部分として制度化するのが賢明だろう。"
+ cuman_lancers_reform_desc:0 "クマン人は何世紀にもわたってカルパティア盆地付近に住んでいたが、最近ではドナウ川とティサ川の間の広大な草原を定住の地としている。彼らは数々の紛争で我々を助けてくれたが、彼らの連隊を自軍の正規軍化および中核部分に採用するため制度化するのが賢明だろう。"
  mechanic_order_of_the_dragon_unlocked_yes:0 "現地組織「§Yドラゴン騎士団§!」が利用可能"
  mechanic_order_of_the_dragon_unlocked_no:0 " "
  order_of_the_dragon:0 "ドラゴン騎士団"
@@ -2888,7 +2888,7 @@
  azt_bloodletting_practise:0 "流血の風習"
  desc_azt_bloodletting_practise:0 "敵の血を流す代わりに、神々に力を与えるために自分の血も流すことにした。"
  the_fifth_sun:0 "第五の太陽"
- desc_the_fifth_sun:0 "人類の第五創造期において、私たちは誇りを持ち、テオーピシュキの言葉に従わなければならない。"
+ desc_the_fifth_sun:0 "人類の第五創造期において、我々は誇りを持ち、テオーピシュキの言葉に従わなければならない。"
  azt_capital_of_the_alliance:0 "三国同盟の首都"
  desc_azt_capital_of_the_alliance:0 "この州は三国都市同盟の首都となっている。"
  azt_alliance_province:0 "三国同盟都市"
@@ -3418,7 +3418,7 @@
  MAY_venus_title:1 "チャック・エクの徴"
  MAY_venus_desc:1 "マヤ族にとって、空にチャック・エク（金星のマヤ語での呼び名）が見えるということは、戦争の時であり、大きな出来事が間近に迫っていることを意味する。そのような大きな戦争は「星の戦争」と呼ばれる。古典期には、ティカルとカラクムルの間でそのような戦争が数多く戦われた。"
  MAY_realm_size_title:0 "軍事行動の季節"
- MAY_realm_size_desc:0 "マヤの領土とその周辺地域の厳しい気候は、長期間の遠征を継続することを困難にしている。雨季が始まると、荷を運ぶ動物や荷を運ぶ獣がいなければ、ただでさえ困難な輸送が困難になる。装備は運搬人によって運ばれるが、運搬人自身が他の運搬人のために追加の食料を運ぶ運搬人が必要になることもある。進路が川沿いであれば、カヌーを使って遠征範囲を広げることができる。"
+ MAY_realm_size_desc:0 "マヤの領土とその周辺地域の厳しい気候は、長期間の遠征を継続することを困難にしている。雨季が始まると、軽荷物用や重荷物用の駄獣がいなければ、ただでさえ困難な輸送が困難になる。装備は運搬人によって運ばれるが、運搬人自身が他の運搬人のために追加の食料を運ぶ追加運搬人が必要になることもある。進路が川沿いであれば、カヌーを使って遠征範囲を広げることができる。"
  MAY_pass_reform_title:0 "自国社会の改革"
  MAY_pass_reform_desc:0 "一歩一歩、我々は世界の新時代に足を踏み入れるだろう。神々が常に喜び、人間が何も恐れず、誰も恐れる必要のない時代に。"
  MAY_venus_1_title:0 "[Root.GetMayaVenusTitle]"
@@ -3860,7 +3860,7 @@
  boh_protect_against_the_turk_title:0 "トルコからの防衛"
  boh_protect_against_the_turk_desc:0 "オスマントルコは、キリスト教世界を巻き込む脅威となる、領土征服の危険な騒ぎに着手している。我々は避けられないであろうトルコの猛攻撃に対し、国境を確実に守らなければならない。"
  boh_revenge_for_nicopolis_title:0 "ニコポリスの復讐"
- boh_revenge_for_nicopolis_desc:0 "1396年、ボヘミア王はブルガリアのトルコ人に対する正義の十字軍に乗り出し、結局、異教徒に打ち負かされた。私たちは再び軍を結集させ、ブルガリアを奪還し、海を越えてトルコ人を後退させなければならない！"
+ boh_revenge_for_nicopolis_desc:0 "1396年、ボヘミア王はブルガリアのトルコ人に対する正義の十字軍に乗り出し、結局、異教徒に打ち負かされた。我々は再び軍を結集させ、ブルガリアを奪還し、海を越えてトルコ人を後退させなければならない！"
  boh_liberate_the_balkans_title:0 "バルカン半島の解放"
  boh_liberate_the_balkans_desc:0 "外国の抑圧者はあまりにも長い間、バルカン半島を苦しめてきた。強力なボヘミアの存在は、彼らの解放となるだろう。我々の正義の統治の下で、バルカン半島の人々は自由と繁栄を享受するだろう。"
  boh_hussite_regency_title:0 "摂政の終わり"
@@ -3988,7 +3988,7 @@
  boh_svatopluks_heir:0 "スヴァトプルクの後継者"
  desc_boh_svatopluks_heir:0 "スヴァトプルクの後継者として、我々の支配者は彼の目標と野心を受け継いでいる。モラヴィアの先人たち以上の高みを目指そう！"
  boh_centralized_power:0 "権力の集権化"
- desc_boh_centralized_power:0 "何世紀もの時を経て、我々はようやく君主に対する階級の影響力を排除することができた。私たちの中央集権的な権力構造により、効率性と安定性が保証される。"
+ desc_boh_centralized_power:0 "何世紀もの時を経て、我々はようやく君主に対する階級の影響力を排除することができた。自国の中央集権的な権力構造により、効率性と安定性が保証される。"
  boh_hegemon:0 "ボヘミアの覇権"
  desc_boh_hegemon:0 "我が国はヨーロッパの覇権国家として君臨し、権力と影響力の象徴となっている。"
  boh_premyslid_heritage_1:0 "ブシェミスル朝の遺産"
@@ -4261,7 +4261,7 @@
  mongols_invasion_of_india_title:0 "ヒンドゥスターンの陥落"
  mongols_invasion_of_india_desc:0 "スレイマン山脈を越えるのは、自国の大軍にとって困難な任務である。加えて、かつての大ハンは金よりも権力に重きを置いていたため、インドの富には興味を示さなかった。我々は、彼がしなかったことをやろう。つまり、インドを侵略することだ。"
  mongols_caucasia_title:0 "コーカサスの横断"
- mongols_caucasia_desc:0 "コーカサス山脈は多くの大帝国にとって自然の国境を作り出したが、我々の拡大に関して何の制限もない事が認められるだろう。私たちは山の住人を服従させ、豊かな土地に向かって進んでいくだろう。"
+ mongols_caucasia_desc:0 "コーカサス山脈は多くの大帝国にとって自然の国境を作り出したが、我々の拡大に関して何の制限もない事が認められるだろう。我々は山の住人を服従させ、豊かな土地に向かって進んでいくだろう。"
  mongols_fall_of_ryazan_title:0 "リャザンの陥落"
  mongols_fall_of_ryazan_desc:0 "リャザン公国はもはや、チンギス・ハンの後継者を彼らの支配者だとは思っていない。火と剣だけでなく、我が国の急速な拡張を通じて思い出させなければならない。"
  mongols_pax_mongolica_mission_title:0 "パクス・モンゴリカ"
@@ -4329,7 +4329,7 @@
  moghulistan_carpathia_title:0 "カルパティアへの帰還"
  moghulistan_carpathia_desc:0 "大ハーンの征服の最も遠い範囲はハンガリーで止まった。ハンガリーの支配者は殺され、地方は荒廃したが、我々は拡張しすぎたため、ルテニアへの帰還を余儀なくされた。今、我々は帰還したので、滞留するつもりである。"
  moghulistan_contact_with_mongols_title:0 "大元の残党"
- moghulistan_contact_with_mongols_desc:0 "元朝は滅びた。その残骸はモンゴルの地にある。私たちが中国の正当な支配者として戴冠するためには、残骸すべてを確保しなければならない。"
+ moghulistan_contact_with_mongols_desc:0 "元朝は滅びた。その残骸はモンゴルの地にある。我々が中国の正当な支配者として戴冠するためには、残骸すべてを確保しなければならない。"
  moghulistan_manchuria_title:0 "満州の征服"
  moghulistan_manchuria_desc:1 "満洲の遊牧民たちは分裂しています。彼らはかつて我々に忠誠を誓っていましたが、我々を見捨てることに決めました。彼らを征服し、モンゴル帝国に連れ戻しましょう。"
  moghulistan_korea_title:0 "隠遁の終焉者"
@@ -4367,7 +4367,7 @@
  tatars_strengthen_raids_title:0 "土地襲撃の強化"
  tatars_strengthen_raids_desc:0 "我々の王国内の数多の遊牧民部族は、富の名のもとに、常に略奪と征服に出かけている。この取り組みで彼らを助けよう。"
  tatars_caucasia_title:0 "コーカサスの横断"
- tatars_caucasia_desc:0 "コーカサス山脈は多くの大帝国にとって自然の国境を作り出したが、我々の拡大に関して何の制限もない事が認められるだろう。私たちは山の住人を服従させ、豊かな土地に向かって進んでいくだろう。"
+ tatars_caucasia_desc:0 "コーカサス山脈は多くの大帝国にとって自然の国境を作り出したが、我々の拡大に関して何の制限もない事が認められるだろう。我々は山の住人を服従させ、豊かな土地に向かって進んでいくだろう。"
  tatars_heart_of_persia_title:0 "ペルシアの中心地"
  tatars_heart_of_persia_desc:0 "モンゴル人がペルシアに侵入したとき、彼らは行く手にあるものすべてを破壊し、この地域を混乱に陥れた。我々がペルシアの正当な支配者として帰還すれば、我々が作り出したこの不和を統一することができる。"
  tatars_into_egypt_title:0 "エジプトへ"
@@ -4449,7 +4449,7 @@
  tatars_kazakhs_title:0 "カザフ民族"
  tatars_kazakhs_desc:0 "さらにずっとステップに入り込まねばならない。東方へと行進する際は、カザフは我がオルドに参加させねばならない。"
  tatars_contact_with_oirat_title:0 "大元の残党"
- tatars_contact_with_oirat_desc:0 "元朝は滅びた。その残骸はモンゴルの地にある。私たちが中国の正当な支配者として戴冠するためには、残骸すべてを確保しなければならない。"
+ tatars_contact_with_oirat_desc:0 "元朝は滅びた。その残骸はモンゴルの地にある。我々が中国の正当な支配者として戴冠するためには、残骸すべてを確保しなければならない。"
  tatars_manchuria_title:0 "満州の征服"
  tatars_manchuria_desc:0 "満洲の遊牧民たちは分裂しています。彼らはかつて我々に忠誠を誓っていましたが、我々を見捨てることに決めました。彼らを征服し、モンゴル帝国に連れ戻しましょう。"
  tatars_southern_china_title:0 "紅巾賊の終焉"
@@ -4591,7 +4591,7 @@
  hordes_harmony_between_tengri_and_china:0 "テングリの人々の調和"
  desc_hordes_harmony_between_tengri_and_china:0 "テングリの人々は孔子の教えと調和している。"
  hordes_integration_into_chinese_society:0 "テングリの支持"
- desc_hordes_integration_into_chinese_society:0 "この州は、彼らに対する私たちの宗教的寛容を支持している。"
+ desc_hordes_integration_into_chinese_society:0 "この州は、彼らに対する我々の宗教的寛容を支持している。"
  hordes_harmony_of_faith:0 "宗教間の調和"
  desc_hordes_harmony_of_faith:0 "我々は自国の多くの信仰の中で絶対的な調和を達成した。"
  hordes_cossacks:0 "コサックの人々の統合"
