Save/Update files [ci skip]

--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -1255,7 +1255,7 @@
  buddhism_events.33.d:0 "はるか昔、モンゴルの支配者は仏教を採用し、彼らの人々に広めようとした。しかし、長い間、多くの人々はシャーマニズムの古いやり方に戻ってきた。[Root.Monarch.GetName]は、常にクビライ・ハーンやその宗教の名において創始した帝国の遺産に魅了されてきた。精力的に成長しているチベットの修道会の便りが我々に到達すると、[Root.Monarch.GetHerHim]にとってこれを調査する必要があることは明らかだった。\nラマの大使は、今我々の前に立ち、ラマは真に[Root.Monarch.GetName]がクビライ・ハーンの生まれ変わりであると期待していると述べた。彼は我々支配しているすべての土地に彼の宗派を広めることを許すならば、我々の支配を支持する準備もできている。"
  buddhism_events.33.a:0 "変化の時が来た。"
  buddhism_events.33.b:0 "我々の古いやり方を守ろう。"
- buddhism_events.34.t:0 "使者はチベットから帰還した"
+ buddhism_events.34.t:0 "使者がチベットから帰還"
  buddhism_events.34.d:0 "チベットから戻った我々の使者によると、有力な宗教指導者の1人が、[Root.Monarch.GetName]とその王朝のために働くことに関心を持っているという。しかし彼が[Root.Capital.GetCapitalName]に来るとすれば、我々は彼の安全を保証するだけではなく、はるかに多くのことをする必要がある。かのラマが我々と運命をともにするためには、彼および彼の転生者たちが我が国において適切に尊敬され影響力をもつこと、彼と彼の弟子のために立派な僧院を設立することを誓う必要がある。我々がこれらの保証をすることができない場合は、我々の土地で新しい僧院を確立しようとしている修道僧の代表団を迎え入れることで満足しなければならない。"
  buddhism_events.34.a:0 "同意する。"
  buddhism_events.34.b:0 "僧侶を受け入れる。"
