--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1234,8 +1234,8 @@
  RESCIND_UPGRADE_SUBJECT_TYPE_SPECIFIC_DESC:0 "従属国関係のアップグレード$SUBJECTTYPEUPGRADE$を取り消します。\nこれには§Y$COST$§W¤かかります。"
  RESCIND_UPGRADE_SUBJECT_TYPE_EFFECT:0 "現在、関係が取り消されました：\n$SUBJECTTYPEUPGRADE$"
  RESCIND_UPGRADE_SUBJECT_TYPE_NAME:0 "$SUBJECTTYPEUPGRADE$を取り消す"
- GALLEY_BONUS_NOT_INLAND_SEA_NO_MALUS_DESC:0 "ここは内海・沿岸ではないので、ガレー船はここでダメージボーナスを得ることはできません。"
- CONCENTRATE_DEVELOPMENT_TAKE:0 "開発度$DEV$は、$STATE|Y$から取得します。これは、$ADM$£adm£、$DIP$£dip£、$MIL$£mil£に変換されます。"
+ GALLEY_BONUS_NOT_INLAND_SEA_NO_MALUS_DESC:0 "ここは内海・沿岸ではないため、ガレー船がダメージボーナスを得ることはできません。"
+ CONCENTRATE_DEVELOPMENT_TAKE:0 "開発度$DEV$が、$STATE|Y$から取られます。これは、$ADM$£adm£、$DIP$£dip£、$MIL$£mil£に変換されます。"
  CONCENTRATE_DEVELOPMENT_DISTRIBUTION:0 "その君主点（端数切り捨て）により首都に $ADM$, $DIP$, $MIL$ の開発度が追加されます。"
  CONCENTRATE_DEVELOPMENT_CONSEQUENCES:1 "これにより独立欲求$LIBERTYDESIRE$と外交評価$OPINION$が$COUNTRY|Y$に発生し、開発度を奪われた州に荒廃を与えます。"
  AGGRESSIVE_EXPANSION_REFORM_PREVENTS:0 "改革$REFORM$は可決している"
