--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -791,10 +791,10 @@
  republic_different_religion_same_group_border:0 "近隣の異端国"
  different_religions_group_border:0 "近隣の異教国"
  different_religion_same_group_border:0 "近隣の異端国"
- misguided_heretic:0 "異端を許容した"
- misguided_heretic_border:0 "異端に寛容な隣国"
- republic_misguided_heretic:0 "異端を許容した"
- republic_misguided_heretic_border:0 "異端に寛容な隣国"
+ misguided_heretic:0 "許容されている異端"
+ misguided_heretic_border:0 "隣国の許容されている異端"
+ republic_misguided_heretic:0 "許容されている異端"
+ republic_misguided_heretic_border:0 "隣国の許容されている異端"
  the_proclamation_of_year:0 "制限付き植民地戦争"
  non_restricted_colonial_wars:0 "無制限植民地戦争"
  restricted_colonial_expansion_opinion:0 "制限付き植民地拡大"
